--- a/Side_projects.qmd
+++ b/Side_projects.qmd
@@ -3,6 +3,6 @@ title: "Side projects"
 listing: 
   contents: Side_projects # all Quarto docs in the `posts` directory will be included on your listing page
   type: grid # or `default`, grid or `table`; each type has its own set of yaml options to include
-  sort: "date desc" # can also sort on more than one field
+  sort: "category desc" # can also sort on more than one field
   categories: true # allows you to sort posts by assigned categories 
 ---
